welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: ';' expected but 'else' found.
      } else {avance();gauche()}} else {if (getDirection() == Direction.OUEST) {droite();if (estFaceMur()){return True} else{avance();droite()}}}; else {false}}}
                                                                                                                                                   ^